Replace some deferments with properties

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Gustavo Takachi Toyota <gustavotakachitoyota@gmail.com>",
   "private": true,
   "scripts": {
-    "dev": "quasar dev",
+    "dev": "quasar dev -m ssr",
     "build": "quasar build",
     "lint": "eslint --ext .js,.ts,.vue ./",
     "format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\" --ignore-path .gitignore",
