--- a/package.json
+++ b/package.json
@@ -10,26 +10,42 @@
     "build": "quasar build",
     "lint": "eslint --ext .js,.ts,.vue ./",
     "format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\" --ignore-path .gitignore",
-    "test": "echo \"No test specified\" && exit 0"
+    "test": "echo \"No test specified\" && exit 0",
+    "postinstall": "yarn patch-package"
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "@syncedstore/core": "^0.3.7",
     "axios": "^0.21.1",
+    "highlight.js": "^11.5.1",
+    "idb": "^7.0.1",
+    "js-base64": "^3.7.2",
+    "lodash": "^4.17.21",
     "patch-package": "^6.4.7",
     "pinia": "^2.0.11",
+    "postinstall-postinstall": "^2.1.0",
     "quasar": "^2.6.0",
+    "quill": "^1.3.7",
+    "quill-cursors": "^3.1.2",
     "url": "^0.11.0",
+    "uuid": "^8.3.2",
     "vue": "^3.0.0",
     "vue-i18n": "^9.0.0",
     "vue-router": "^4.0.0",
+    "vuedraggable": "^2.24.3",
+    "y-indexeddb": "^9.0.7",
+    "y-quill": "^0.1.4",
+    "y-websocket": "^1.4.0",
     "yjs": "^13.5.34",
     "zod": "^3.14.4"
   },
   "devDependencies": {
     "@intlify/vite-plugin-vue-i18n": "^3.3.1",
     "@quasar/app-vite": "^1.0.0-alpha.0",
+    "@types/lodash": "^4.14.181",
     "@types/node": "^12.20.21",
+    "@types/quill": "^2.0.9",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "autoprefixer": "^10.4.2",
