--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "quasar build",
     "lint": "eslint --ext .js,.ts,.vue ./",
     "format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\" --ignore-path .gitignore",
-    "test": "echo \"No test specified\" && exit 0",
+    "test": "jest",
     "postinstall": "yarn patch-package"
   },
   "dependencies": {
@@ -53,6 +53,7 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "eslint-plugin-vue": "^8.5.0",
+    "jest": "^27.5.1",
     "prettier": "^2.5.1",
     "typescript": "^4.5.4"
   },
