--- a/package.json
+++ b/package.json
@@ -10,8 +10,16 @@
     "build": "quasar build",
     "lint": "eslint --ext .js,.ts,.vue ./",
     "format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\" --ignore-path .gitignore",
-    "test": "jest",
-    "postinstall": "yarn patch-package"
+    "test": "echo \"See package.json => scripts for available tests.\" && exit 0",
+    "postinstall": "yarn patch-package",
+    "test:unit:ui": "majestic",
+    "test:unit": "jest --updateSnapshot",
+    "test:unit:ci": "jest --ci",
+    "test:unit:coverage": "jest --coverage",
+    "test:unit:watch": "jest --watch",
+    "test:unit:watchAll": "jest --watchAll",
+    "serve:test:coverage": "quasar serve test/jest/coverage/lcov-report/ --port 8788",
+    "concurrently:dev:jest": "concurrently \"quasar dev\" \"jest --watch\""
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
@@ -42,6 +50,9 @@
   "devDependencies": {
     "@intlify/vite-plugin-vue-i18n": "^3.3.1",
     "@quasar/app-vite": "^1.0.0-alpha.0",
+    "@quasar/quasar-app-extension-testing": "^2.0.3",
+    "@quasar/quasar-app-extension-testing-unit-jest": "^3.0.0-alpha.10",
+    "@types/jest": "^27.4.1",
     "@types/lodash": "^4.14.181",
     "@types/node": "^12.20.21",
     "@types/quill": "^2.0.9",
@@ -51,9 +62,10 @@
     "autoprefixer": "^10.4.2",
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-jest": "^25.2.2",
     "eslint-plugin-unused-imports": "^2.0.0",
     "eslint-plugin-vue": "^8.5.0",
-    "jest": "^27.5.1",
+    "majestic": "^1.7.0",
     "prettier": "^2.5.1",
     "typescript": "^4.5.4"
   },
