--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "eslint-plugin-vue": "^8.5.0",
     "majestic": "^1.7.0",
     "prettier": "^2.5.1",
+    "quill-delta": "^5.0.0",
     "typescript": "^4.5.4"
   },
   "engines": {
