--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@quasar/extras": "^1.0.0",
     "@syncedstore/core": "^0.3.7",
     "axios": "^0.21.1",
+    "cookie-parser": "^1.4.6",
     "highlight.js": "^11.5.1",
     "idb": "^7.0.1",
     "js-base64": "^3.7.2",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "patch-package": "^6.4.7",
     "pinia": "^2.0.11",
