--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "@syncedstore/core": "^0.3.7",
+    "argon2-browser": "^1.18.0",
     "axios": "^0.21.1",
     "cookie-parser": "^1.4.6",
     "highlight.js": "^11.5.1",
     "idb": "^7.0.1",
     "js-base64": "^3.7.2",
     "jwt-decode": "^3.1.2",
+    "libsodium-wrappers": "^0.7.10",
     "lodash": "^4.17.21",
     "patch-package": "^6.4.7",
     "pinia": "^2.0.11",
@@ -53,7 +55,9 @@
     "@quasar/app-vite": "^1.0.0-alpha.0",
     "@quasar/quasar-app-extension-testing": "^2.0.3",
     "@quasar/quasar-app-extension-testing-unit-jest": "^3.0.0-alpha.10",
+    "@types/argon2-browser": "^1.18.1",
     "@types/jest": "^27.4.1",
+    "@types/libsodium-wrappers": "^0.7.9",
     "@types/lodash": "^4.14.181",
     "@types/node": "^12.20.21",
     "@types/quill": "^2.0.9",
@@ -64,6 +68,7 @@
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-jest": "^25.2.2",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "eslint-plugin-vue": "^8.5.0",
     "majestic": "^1.7.0",
